# llm-relay

./: .env.example  .gitignore  LICENSE  README.md  install.sh  llm-relay  pyproject.toml  setup.py
brainstorming/: 01-problematique.md  02-formats-api.md  03-gap-analysis.md  04-PRD.md  05-plan.md  06-references.md  07-architecture.md  08-claude-desktop-3p.md  README.md
contributing/: dev-setup.md  troubleshooting.md  usage.md
llm_relay/: __init__.py  __main__.py  config.py  models.py
llm_relay/cli/: __init__.py  claude_writer.py  codex_writer.py  commands.py  config_manager.py  pid.py  wizard.py
llm_relay/parsers/: __init__.py  anthropic_messages.py  messages.py  xml_tools.py
llm_relay/routing/: __init__.py  circuit_breaker.py  engine.py  fallback.py
llm_relay/server/: __init__.py  app.py  handler.py  tls.py
llm_relay/session/: __init__.py  store.py
llm_relay/translators/: __init__.py  anthropic_pass.py  base.py  chat_completions.py  deepseek.py  factory.py  opencode.py
tests/: __init__.py  test_anthropic_messages.py  test_parsers.py  test_routing.py  test_session.py  test_translators.py
