[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-relay"
version = "0.1.0"
description = "A local proxy that translates the OpenAI Responses API to any OpenAI-compatible LLM backend (DeepSeek, Mistral, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "proxy", "openai", "deepseek", "codex", "api-gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

# No third-party dependencies — pure stdlib only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
llm-relay = "llm_relay.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_relay*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
